--- a/it_modernization/agency_comprehensive.yaml
+++ b/it_modernization/agency_comprehensive.yaml
@@ -850,6 +850,32 @@ CFPB:
     id: 3XxWRrBu
   - date: 2025-04-12
     type: interagency
+    event: Emailing from his CFPB account, Jeremy Lewin shares the documentation for the RIF with DOGE staff posted at several agencies. It's unclear if they are representing their agencies or DOGE in the communication
+    source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277287/gov.uscourts.dcd.277287.137.1_1.pdf
+    case_no: 1:25-cv-00381
+    interagency_doge_reps:
+      CFPB:
+      - Gavin Kliger
+      - Jeremy Lewin
+      - Chris Young
+      - Jordan Wick
+      HHS: Zach Terrell
+      Education: Alexandra Beynon
+    agency: CFPB
+    id: MXinRonY
+  - date: 2025-04-12
+    type: official
+    event: Jeremy Lewin emails CFPB leadership asking for full global admininstrative access for Entra and HRConnect to be restored for the DOGE engineers. Weirdly, this list includes Luke Farritor who offboarded on 2025-03-04. This request is denied by the agency CIO.
+    source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277287/gov.uscourts.dcd.277287.137.1_1.pdf
+    case_no: 1:25-cv-00381
+    named:
+    - Gavin Kliger
+    - Jeremy Lewin
+    - Jordan Wick
+    agency: CFPB
+    id: YpiseeEG
+  - date: 2025-04-12
+    type: interagency
     event: Gavin Kliger begins working with Adam Martinez of CFPB and Jeremy Lewin at USAID on the infrastructure for a massive RIF at the CFPB
     interagency_doge_reps:
       CFPB: Gavin Kliger
@@ -860,7 +886,7 @@ CFPB:
     id: 7a5wZUiM
   - date: 2025-04-13
     type: report
-    event: In an email, CFPB CIO Chris Chilbert reports that Gavin Kliger has been granted access to several unnamed systems. He also asks to confirm that Gavin Kliger should have his access revoked to systems that let him deactivate employee email accounts or lock them out of their laptops
+    event: In an email, CFPB CIO Chris Chilbert reports that Gavin Kliger has been granted access to Ops HC - Prod to build the RIF automation. He also asks to confirm that Gavin Kliger should have his access revoked to systems that let him deactivate employee email accounts or lock them out of their laptops
     case_no: 1:25-cv-00381
     source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277287/gov.uscourts.dcd.277287.128.4_1.pdf
     named:
@@ -885,6 +911,20 @@ CFPB:
     source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277287/gov.uscourts.dcd.277287.131.1.pdf
     agency: CFPB
     id: bUXEK8RF
+  - date: 2025-04-13
+    type: interagency
+    event: Adam Martinez responds in the affirmative to an email (redacted in filings) requesting items/access for unspecified people to conduct the RIF. Several DOGE staff are also cc'ed on the message
+    source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277287/gov.uscourts.dcd.277287.137.1_1.pdf
+    case_no: 1:25-cv-00381
+    interagency_doge_reps:
+      DOGE:
+      - Ashley Boizelle
+      - Steve Davis
+      CFPB:
+      - Gavin Kliger
+      - Jeremy Lewin
+    agency: CFPB
+    id: 7dbzTENK
   - date: 2025-04-16
     type: interagency
     event: Noah Peters at OPM denies the CFPB request for an "emergency" 30-day notice for a RIF at the CFPB
@@ -2024,6 +2064,20 @@ DOGE:
     agency: DOGE
     id: Gti7PARC
     source_title: AFL-CIO v. Dep't of Labor (D.D.C.)
+  - date: 2025-04-13
+    type: interagency
+    event: Adam Martinez responds in the affirmative to an email (redacted in filings) requesting items/access for unspecified people to conduct the RIF. Several DOGE staff are also cc'ed on the message
+    source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277287/gov.uscourts.dcd.277287.137.1_1.pdf
+    case_no: 1:25-cv-00381
+    interagency_doge_reps:
+      DOGE:
+      - Ashley Boizelle
+      - Steve Davis
+      CFPB:
+      - Gavin Kliger
+      - Jeremy Lewin
+    agency: CFPB
+    id: 7dbzTENK
   - date: 2025-04-16
     type: report
     event: Three DOGE staffers are reported to work with staff from DHS, the State Department and USCIS on implementing an application process for a $5 Million "Gold Card" visa
@@ -2299,6 +2353,31 @@ DOJ:
     source: https://www.reuters.com/technology/cybersecurity/doge-official-doj-bragged-about-hacking-distributing-pirated-software-2025-04-02/
     agency: DOJ
     id: ZBURnU93
+  - date: 2025-04-03
+    type: interagency
+    event: Tarak Makecha, a DOGE representative at DOJ is forwarded a list at 6pm of DOJ contracts to terminate for the Acacia Center, a nonprofit in DOGE's crosshairs that day and a plaintiff in a lawsuit against the DOJ
+    interagency_doge_reps:
+      DOJ: Tarak Makecha
+      GSA: Josh Gruenbaum
+    source: https://www.lawfaremedia.org/article/on-doge--directives--and-doj
+    agency: DOJ
+    id: kaxNhRgZ
+  - date: 2025-04-03
+    type: disruption
+    event: Tarak Makecha begins demanding at 6:25pm the Acacia contracts must be terminated immediately despite it being after business hours
+    named:
+    - Tarak Makecha
+    source: https://www.lawfaremedia.org/article/on-doge--directives--and-doj
+    agency: DOJ
+    id: CC2AMRi3
+  - date: 2025-04-03
+    type: disruption
+    event: Tarak Makecha finds a DOJ Contracting Officer after hours at 7:25pm to send the termination despite concerns it violates the terms of a court order to not provide 3 days notice
+    named:
+    - Tarak Makecha
+    source: https://www.lawfaremedia.org/article/on-doge--directives--and-doj
+    agency: DOJ
+    id: eB4QfKtt
   systems:
     ECAS:
       name: Executive Office for Immigration Review's Court and Appeals System
@@ -2621,6 +2700,21 @@ Education:
     - Education
     id: aLxLCzjS
     source_title: American Federation of Teachers et al v. Bessent et al (D. Md.)
+  - date: 2025-04-12
+    type: interagency
+    event: Emailing from his CFPB account, Jeremy Lewin shares the documentation for the RIF with DOGE staff posted at several agencies. It's unclear if they are representing their agencies or DOGE in the communication
+    source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277287/gov.uscourts.dcd.277287.137.1_1.pdf
+    case_no: 1:25-cv-00381
+    interagency_doge_reps:
+      CFPB:
+      - Gavin Kliger
+      - Jeremy Lewin
+      - Chris Young
+      - Jordan Wick
+      HHS: Zach Terrell
+      Education: Alexandra Beynon
+    agency: CFPB
+    id: MXinRonY
   systems:
     COD:
       name: Common Origination and Disbursement System
@@ -2747,6 +2841,18 @@ Energy:
     - SSA
     - VA
     id: o2TMNF83
+  - date: 2025-02-04~
+    type: onboarded
+    fuzz: Date is approximate and unknown based on Farritor access to systems
+    comment: Names and timeline were given by a DOE spokesperson several months later
+    onboard_type: detailed
+    named:
+    - Luke Farritor
+    - Adam Ramada
+    event: In a report on the Dept of Energy, a spokesperson says DOGE staff were only granted access for a few days
+    source: https://www.npr.org/2025/04/28/nx-s1-5378684/doge-energy-department-nuclear-secrets-access
+    agency: Energy
+    id: i8gZkSFA
   - date: 2025-02-05
     type: access_granted
     access_type: admin
@@ -2773,6 +2879,16 @@ Energy:
     source: https://www.reuters.com/world/us/three-doge-members-raise-access-concerns-us-energy-department-sources-say-2025-02-07/
     agency: Energy
     id: Hqzq377Z
+  - date: 2025-02-08~
+    type: report
+    fuzz: Date is approximate and unknown. Report is unconfirmed
+    event: According to Dept. of Energy spokesperson, DOGE staff departed the agency within a few days of arrival
+    source: https://www.npr.org/2025/04/28/nx-s1-5378684/doge-energy-department-nuclear-secrets-access
+    named:
+    - Luke Farritor
+    - Adam Ramada
+    agency: Energy
+    id: 9ApmChVN
   - date: 2025-03-07
     type: offboarded
     event: Ryan Reiedel resigns from the CIO role and departs from the agency
@@ -2794,6 +2910,15 @@ Energy:
     source: https://www.nytimes.com/2025/04/01/us/politics/federal-layoff-buyout-offers.html
     agency: Energy
     id: 6ZDshcKF
+  - date: 2025-04-28
+    type: report
+    event: Two DOGE staffers reportedly had accounts for several weeks on systems and networks that handle classified material about nuclear weapons
+    source: https://www.npr.org/2025/04/28/nx-s1-5378684/doge-energy-department-nuclear-secrets-access
+    named:
+    - Luke Farritor
+    - Adam Ramada
+    agency: Energy
+    id: 2ZH8rMfL
   systems: {}
   cases: {}
 
@@ -3196,7 +3321,9 @@ Treasury:
   - Gavin Kliger
   - Tom Krause
   - Aram Moghaddassi
+  - Todd Newnam
   - Roland Shen
+  - Linda Whitridge
   - Ryan Wunderly
   events:
   - date: 2025-01-08
@@ -3510,6 +3637,20 @@ Treasury:
     - Education
     id: aLxLCzjS
     source_title: American Federation of Teachers et al v. Bessent et al (D. Md.)
+  - date: 2025-04-11
+    type: report
+    event: In a legal filing, the government describes the DOGE team at Treasury of consisting of six people, some previously unknown
+    source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277055/gov.uscourts.dcd.277055.61.2.pdf
+    case_no: 1:25-cv-00313
+    named:
+    - Tom Krause
+    - Todd Newnam
+    - Ryan Wunderly
+    - Linda Whitridge
+    - Sam Corcos
+    - Gavin Kliger
+    agency: Treasury
+    id: hRNyXeoy
   - date: 2025-04-12
     type: legal
     event: Judge Vargas rules in New York et al vs. Donald Trump that Ryan Wunderly should be granted access to Treasury systems
@@ -4084,6 +4225,7 @@ GSA:
   - Stephen Ehikian
   - Luke Farritor
   - Derek Geissler
+  - Josh Gruenbaum
   - Joshua Hanley
   - Nicole Hollander
   - Raj Jegannathan
@@ -4379,6 +4521,15 @@ GSA:
     agency: USIP
     id: mrPV8r2V
     source_title: United States Institute of Peace v. Jackson (D.D.C.)
+  - date: 2025-04-03
+    type: interagency
+    event: Tarak Makecha, a DOGE representative at DOJ is forwarded a list at 6pm of DOJ contracts to terminate for the Acacia Center, a nonprofit in DOGE's crosshairs that day and a plaintiff in a lawsuit against the DOJ
+    interagency_doge_reps:
+      DOJ: Tarak Makecha
+      GSA: Josh Gruenbaum
+    source: https://www.lawfaremedia.org/article/on-doge--directives--and-doj
+    agency: DOJ
+    id: kaxNhRgZ
   - date: 2025-04-08
     type: report
     event: A partial copy of the GSA's A-Suite access list includes multiple DOGE personnel listed as based in GSA
@@ -4996,6 +5147,21 @@ HHS:
     - DOD
     - NIH
     id: Uasqbriy
+  - date: 2025-04-12
+    type: interagency
+    event: Emailing from his CFPB account, Jeremy Lewin shares the documentation for the RIF with DOGE staff posted at several agencies. It's unclear if they are representing their agencies or DOGE in the communication
+    source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277287/gov.uscourts.dcd.277287.137.1_1.pdf
+    case_no: 1:25-cv-00381
+    interagency_doge_reps:
+      CFPB:
+      - Gavin Kliger
+      - Jeremy Lewin
+      - Chris Young
+      - Jordan Wick
+      HHS: Zach Terrell
+      Education: Alexandra Beynon
+    agency: CFPB
+    id: MXinRonY
   - date: 2025-04-18~
     type: access_revoked
     access_systems:
