--- a/it_modernization/raw_data/events.yaml
+++ b/it_modernization/raw_data/events.yaml
@@ -1126,6 +1126,19 @@
   id: XjqwLht5
   source_title: AFL-CIO v. Dep't of Labor (D.D.C.)
 
+- date: 2025-02-04~
+  type: onboarded
+  fuzz: Date is approximate and unknown based on Farritor access to systems
+  comment: Names and timeline were given by a DOE spokesperson several months later
+  onboard_type: detailed
+  named:
+  - Luke Farritor
+  - Adam Ramada
+  event: In a report on the Dept of Energy, a spokesperson says DOGE staff were only granted access for a few days
+  source: https://www.npr.org/2025/04/28/nx-s1-5378684/doge-energy-department-nuclear-secrets-access
+  agency: Energy
+  id: i8gZkSFA
+
 - date: 2025-02-05
   type: report
   event: DOGE staff reported with agency buildings with access to certain systems like CALM, but sources deny they have access to HIGLAS
@@ -1580,6 +1593,17 @@
   source: https://www.nbcnews.com/politics/politics-news/usaid-reduce-foreign-service-officers-trump-cuts-federal-government-rcna191122
   agency: USAID
   id: dJnZqbb4
+
+- date: 2025-02-08~
+  type: report
+  fuzz: Date is approximate and unknown. Report is unconfirmed
+  event: According to Dept. of Energy spokesperson, DOGE staff departed the agency within a few days of arrival
+  source: https://www.npr.org/2025/04/28/nx-s1-5378684/doge-energy-department-nuclear-secrets-access
+  named:
+  - Luke Farritor
+  - Adam Ramada
+  agency: Energy
+  id: 9ApmChVN
 
 - date: 2025-02-08
   type: report
@@ -5923,6 +5947,34 @@
   agency: SSA
   id: WQ7BVkDi
 
+- date: 2025-04-03
+  type: interagency
+  event: Tarak Makecha, a DOGE representative at DOJ is forwarded a list at 6pm of DOJ contracts to terminate for the Acacia Center, a nonprofit in DOGE's crosshairs that day and a plaintiff in a lawsuit against the DOJ
+  interagency_doge_reps:
+    DOJ: Tarak Makecha
+    GSA: Josh Gruenbaum
+  source: https://www.lawfaremedia.org/article/on-doge--directives--and-doj
+  agency: DOJ
+  id: kaxNhRgZ
+
+- date: 2025-04-03
+  type: disruption
+  event: Tarak Makecha begins demanding at 6:25pm the Acacia contracts must be terminated immediately despite it being after business hours
+  named:
+  - Tarak Makecha
+  source: https://www.lawfaremedia.org/article/on-doge--directives--and-doj
+  agency: DOJ
+  id: CC2AMRi3
+
+- date: 2025-04-03
+  type: disruption
+  event: Tarak Makecha finds a DOJ Contracting Officer after hours at 7:25pm to send the termination despite concerns it violates the terms of a court order to not provide 3 days notice
+  named:
+  - Tarak Makecha
+  source: https://www.lawfaremedia.org/article/on-doge--directives--and-doj
+  agency: DOJ
+  id: eB4QfKtt
+
 - date: 2025-04-04
   type: report
   event: Three DOGE staffers are listed in the public directory of FCC staff and listed as associated with the Office of the Chairman at the FCC
@@ -6206,6 +6258,21 @@
   agency: DHS
   id: VXSiUz7f
 
+- date: 2025-04-11
+  type: report
+  event: In a legal filing, the government describes the DOGE team at Treasury of consisting of six people, some previously unknown
+  source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277055/gov.uscourts.dcd.277055.61.2.pdf
+  case_no: 1:25-cv-00313
+  named:
+  - Tom Krause
+  - Todd Newnam
+  - Ryan Wunderly
+  - Linda Whitridge
+  - Sam Corcos
+  - Gavin Kliger
+  agency: Treasury
+  id: hRNyXeoy
+
 - date: 2025-04-12
   type: disruption
   event: A DOGE engineer has apparently removed the ability of government agencies to post new grants to grants.gov and requiring them to all be sent to a new email address created this week for reviews
@@ -6243,6 +6310,34 @@
 
 - date: 2025-04-12
   type: interagency
+  event: Emailing from his CFPB account, Jeremy Lewin shares the documentation for the RIF with DOGE staff posted at several agencies. It's unclear if they are representing their agencies or DOGE in the communication
+  source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277287/gov.uscourts.dcd.277287.137.1_1.pdf
+  case_no: 1:25-cv-00381
+  interagency_doge_reps:
+    CFPB:
+    - Gavin Kliger
+    - Jeremy Lewin
+    - Chris Young
+    - Jordan Wick
+    HHS: Zach Terrell
+    Education: Alexandra Beynon
+  agency: CFPB
+  id: MXinRonY
+
+- date: 2025-04-12
+  type: official
+  event: Jeremy Lewin emails CFPB leadership asking for full global admininstrative access for Entra and HRConnect to be restored for the DOGE engineers. Weirdly, this list includes Luke Farritor who offboarded on 2025-03-04. This request is denied by the agency CIO.
+  source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277287/gov.uscourts.dcd.277287.137.1_1.pdf
+  case_no: 1:25-cv-00381
+  named:
+  - Gavin Kliger
+  - Jeremy Lewin
+  - Jordan Wick
+  agency: CFPB
+  id: YpiseeEG
+
+- date: 2025-04-12
+  type: interagency
   event: Gavin Kliger begins working with Adam Martinez of CFPB and Jeremy Lewin at USAID on the infrastructure for a massive RIF at the CFPB
   interagency_doge_reps:
     CFPB: Gavin Kliger
@@ -6254,7 +6349,7 @@
 
 - date: 2025-04-13
   type: report
-  event: In an email, CFPB CIO Chris Chilbert reports that Gavin Kliger has been granted access to several unnamed systems. He also asks to confirm that Gavin Kliger should have his access revoked to systems that let him deactivate employee email accounts or lock them out of their laptops
+  event: In an email, CFPB CIO Chris Chilbert reports that Gavin Kliger has been granted access to Ops HC - Prod to build the RIF automation. He also asks to confirm that Gavin Kliger should have his access revoked to systems that let him deactivate employee email accounts or lock them out of their laptops
   case_no: 1:25-cv-00381
   source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277287/gov.uscourts.dcd.277287.128.4_1.pdf
   named:
@@ -6291,6 +6386,21 @@
   source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277287/gov.uscourts.dcd.277287.131.1.pdf
   agency: CFPB
   id: bUXEK8RF
+
+- date: 2025-04-13
+  type: interagency
+  event: Adam Martinez responds in the affirmative to an email (redacted in filings) requesting items/access for unspecified people to conduct the RIF. Several DOGE staff are also cc'ed on the message
+  source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277287/gov.uscourts.dcd.277287.137.1_1.pdf
+  case_no: 1:25-cv-00381
+  interagency_doge_reps:
+    DOGE:
+    - Ashley Boizelle
+    - Steve Davis
+    CFPB:
+    - Gavin Kliger
+    - Jeremy Lewin
+  agency: CFPB
+  id: 7dbzTENK
 
 - date: 2025-04-14
   type: legal
@@ -6661,3 +6771,13 @@
   source: https://www.rollingstone.com/politics/politics-features/trump-musk-doge-faa-nda-secret-project-lift-1235325667/
   agency: FAA
   id: kTuTZoGk
+
+- date: 2025-04-28
+  type: report
+  event: Two DOGE staffers reportedly had accounts for several weeks on systems and networks that handle classified material about nuclear weapons
+  source: https://www.npr.org/2025/04/28/nx-s1-5378684/doge-energy-department-nuclear-secrets-access
+  named:
+  - Luke Farritor
+  - Adam Ramada
+  agency: Energy
+  id: 2ZH8rMfL
